# linux-tool

./: Cargo.toml  README.md  build.rs
src/: aur_api.rs  config.rs  main.rs  package_control.rs  pacman.rs  pkg_by_category.rs  search_callback.rs  terminal.rs
ui/: Theme.slint  app-window-config.slint  app-window.slint  logic.slint  pkg-info.slint  pkg-list.slint  pkg-search.slint  popular-packages-page.slint  search-package-page.slint  settings-page.slint  window-config.slint
ui/components/: about-popup.slint  custom-button.slint  custom_button.slint  pkg-list.slint  pkg-search.slint  pkg_list.slint  pkg_search.slint  resize_panel.slint
ui/components/pkg-info/: pkg-info.slint  terminal.slint
ui/components/pkg_info/: pkg_info.slint  terminal.slint
