[package]
name = "linux-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2.5"
raur = "8.0.0"
reqwest = "0.13.2"
serde = {version = "1.0.228", features = ["derive"]}
slint = "1.15.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
slint-build = "1.15.0"

