[package]
name = "linux-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.6.1"
async-compat = "0.2.5"
portable-pty = "0.9.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"]}
slint = "1.15.1"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
slint-build = "1.15.0"

