[package]
name = "linux-tool"
version = "0.2.0"
edition = "2021"
authors = ["Enzo Queiroz Costa <enzo415611@gmail.com>"]
license = "GPL-3.0-only"
description = "AUR and Pacman package manager helper with Slint UI"
repository = "https://github.com/Enzo415611/linux-tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "5.0.2"
anyhow = "1.0.102"
async-compat = "0.2.5"
confy = "2.0.0"
open = "5.3.3"
portable-pty = "0.9.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"]}
slint = "1.15.1"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
slint-build = "1.15.0"
